VDR Plugin 'streamdev' Revision History
---------------------------------------
 
- fixed extremux x264 using value of ABR for VBR (thanks to vel_tins@vdrportal)

2010-07-20: Version 0.5.0b

- fixed wrong URL path in m3u playlists (reported by Norman Thiel)

2010-07-20: Version 0.5.0a

- set externremux.sh executable in distribution archive
- externremux quality value should be wlan54, not wlan45 (reported by
  wolfi.m@vdrportal)

2010-07-19: Version 0.5.0

- using SIGINT in externremux to kill mencoder works better than SIGTERM;
  especially x264 still needs a SIGKILL sometimes
- added --remove-destination to cp commands installing plugins
- fixed "plugin doesn't honor APIVERSION" (reported by carel@vdrportal)
- updated Italian translation (thanks to Diego Pierotto)
- config option "client may suspend" hidden if not applicable
- updated and enhanced README
- separated language resources of client and server
- restructured build process
- added support for HTTP method HEAD
- rewrite of externremux.sh, including support for various URL parameters,
  logging and improved shutdown
- start externremux script in a separate process group
- changed HTTP URL path for externremux from EXTERN to EXT (suggested by
  Rolf Ahrenberg)
- HTTP headers now have to be emitted by externremux script
- pass channel related information and URL parameters to externremux script
  through environment
- implement CGI like interface for externremux script
- dropped "Synchronize EPG" feature. Please use epgsync-plugin instead
  (available from http://vdr.schmirler.de)
- proper tsplay-0.2 patch detection. tsplay-0.1 is no longer recognized
  (thanks to Udo Richter)
- added compatibility with VDR 1.6 tsplay-0.1 patch
- added support for EnhancedAC3 (thanks to Eric Valette)
- fixed a memory leak in cStreamdevPatFilter::GetPid (thanks to lhanisch)
- length -1 is the correct value for streams in M3U playlists
- switching between two encrypted channels on the same transponder didn't