@@ -160,3 +160,6 @@ Norman Thiel
 
 vel_tins
   for reporting that externremux x264 uses value of ABR for VBR
+
+Matthias Prill
+  for reporting a compiler error with older libstdc++ versions
